--- a/MovieList/Views/Home/movieForm.cshtml
+++ b/MovieList/Views/Home/movieForm.cshtml
@@ -6,68 +6,80 @@
 }
 
 @model MovieList.Models.modelResponse
-<div class="row">
-    <div class="column"></div>
-    <div class="column">
-        <!-- Form-->
-        <form asp-action="movieForm" method="post">
-            <div>
-                <label asp-for="Category">Category:</label>
-                <input asp-for="Category" />
-            </div>
 
-            <div>
-                <label asp-for="Title">Title:</label>
-                <input asp-for="Title" />
-            </div>
 
-            <div>
-                <label asp-for="Year">Year:</label>
-                <input asp-for="Year" />
-            </div>
+    <!-- Lines 12 to 18 make the materialize select dropdown work, it's kind of dumb but you get what you pay for.-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function () {
+        var elems = document.querySelectorAll('select');
+        var instances = M.FormSelect.init(elems);
+    });
+    </script>
+    <div class="row">
+        <div class="column"></div>
+        <div class="column">
+            <!-- Form-->
+            <form asp-action="movieForm" method="post">
+                <div>
+                    <label asp-for="Category">Category:</label>
+                    <input asp-for="Category" />
+                </div>
 
-            <div>
-                <label asp-for="Director">Director:</label>
-                <input asp-for="Director" />
-            </div>
+                <div>
+                    <label asp-for="Title">Title:</label>
+                    <input asp-for="Title" />
+                </div>
 
-            <div>
-                <!-- Give choices instead of input-->
-                <label asp-for="Rating">Rating:</label>
-                <select asp-for="Rating">
-                    <option value="">Select One</option>
-                    <option value="G">G</option>
-                    <option value="PG">PG</option>
-                    <option value="PG-13">PG-13</option>
-                    <option value="R">R</option>
-                </select>
-            </div>
+                <div>
+                    <label asp-for="Year">Year:</label>
+                    <input asp-for="Year" />
+                </div>
 
-            <div>
-                <!-- Give choices instead of input-->
-                <label asp-for="Edited">Edited:</label>
-                <select asp-for="Edited">
-                    <option value="">Select One</option>
-                    <option value="true">Yes</option>
-                    <option value="false">No</option>
-                </select>
-            </div>
+                <div>
+                    <label asp-for="Director">Director:</label>
+                    <input asp-for="Director" />
+                </div>
 
-            <div>
-                <label asp-for="Lent">Lent To:</label>
-                <input asp-for="Lent" />
-            </div>
+                <div class="input-field col s12">
+                    <!-- Give choices instead of input-->
+                    <label asp-for="Rating">Rating:</label>
+                    <br />
+                    <select asp-for="Rating">
+                        <option value="">Select One</option>
+                        <option value="G">G</option>
+                        <option value="PG">PG</option>
+                        <option value="PG-13">PG-13</option>
+                        <option value="R">R</option>
+                    </select>
+                </div>
 
-            <div>
-                <label asp-for="Notes">Notes:</label>
-                <input asp-for="Notes" />
-            </div>
+                <div class="input-field col s12">
+                    <!-- Give choices instead of input-->
+                    <label asp-for="Edited">Edited:</label>
+                    <br />
+                    <select asp-for="Edited">
+                        <option value="">Select One</option>
+                        <option value="true">Yes</option>
+                        <option value="false">No</option>
+                    </select>
+                </div>
 
-            <button type="submit">Enter Movie</button>
-        </form>
+                <div>
+                    <label asp-for="Lent">Lent To:</label>
+                    <input asp-for="Lent" />
+                </div>
 
-        <!-- This bottom part will show our validator messages.-->
-        <div asp-validation-summary="All"></div>
-    </div>
-    <div class="column"></div>
-</div>  
+                <div>
+                    <label asp-for="Notes">Notes:</label>
+                    <input asp-for="Notes" />
+                </div>
+
+                <button class="btn" type="submit">Enter Movie</button>
+            </form>
+
+            <!-- This bottom part will show our validator messages.-->
+            <div asp-validation-summary="All"></div>
+        </div>
+        <div class="column"></div>
+    </div>  
