--- a/MovieList/Views/Home/podcasts.cshtml
+++ b/MovieList/Views/Home/podcasts.cshtml
@@ -7,8 +7,10 @@
 <div class="row">
     <div class="column"></div>
     <!-- Bacon sale link-->
-    <div class="column">
+    <div class="container">
+    <div class="column section">
         <a href="https://baconsale.com/">Banconsale Site</a>
     </div>
+        </div>
     <div class="column"></div>
 </div> 
