--- a/MovieList/Views/Shared/_Layout.cshtml
+++ b/MovieList/Views/Shared/_Layout.cshtml
@@ -4,10 +4,24 @@
     <title>The Joel Hilton Film Collection</title>
     <link href="~/css/main.css" rel="stylesheet" />
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
 
 <body>
+    <nav class="black">
+        <div class="nav-wrapper">
+            <!--Making menu with cool CSS and Jquery-->
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                <li><a asp-controller="Home" asp-action="movieForm">Movie Form</a></li>
+                <li><a asp-controller="Home" asp-action="podcasts">Podcasts</a></li>
+                <li><a asp-controller="Home" asp-action="movieList">Movies List</a></li>
+            </ul>
+        </div>
+    </nav>
+
+
     <div class="header">
         <!--Using razor code-->
         <hi>@ViewBag.Title</hi>
@@ -16,15 +30,10 @@
     @RenderBody()
 
 
-    <div class="footer">
-        <!--Making menu with cool Jquery-->
-        <a asp-action="Index">Home</a>
-        <a asp-action="movieForm">Movie Form</a>
-        <a asp-action="podcasts">Podcasts</a>
-        <a asp-action="movieList">Movies List</a>
 
-    </div>
     <p>Copyright 2021</p>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 
 </html>
